force-app/main/default/objects/COM_Release_Version__c/COM_Release_Version__c.object-meta.xml
<CustomObject>
    <label>Release Version</label>
    <nameField>
        <displayFormat>RV-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>