force-app/main/default/objects/COM_Release_Version__c/fields/Instance_Name__c.field-meta.xml
<CustomField>
    <fullName>Instance_Name__c</fullName>
    <description>Node name.</description>
    <inlineHelpText>Node name.</inlineHelpText>
    <label>Instance Name</label>
    <length>16</length>
    <type>Text</type>
</CustomField>