force-app/main/default/objects/COM_Release_Version__c/fields/IsSandbox__c.field-meta.xml
<CustomField>
    <fullName>IsSandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSandbox</label>
    <type>Checkbox</type>
</CustomField>