force-app/main/default/objects/COM_Release_Version__c/fields/Org_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Org_Creation_Date__c</fullName>
    <label>Org Creation Date</label>
    <type>DateTime</type>
</CustomField>