force-app/main/default/objects/COM_Release_Version__c/fields/Release_Version__c.field-meta.xml
<CustomField>
    <fullName>Release_Version__c</fullName>
    <label>Release Version</label>
    <length>12</length>
    <type>Text</type>
</CustomField>