force-app/main/default/objects/COM_Release_Version__c/fields/Sign_Up_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up_Country_Code__c</fullName>
    <label>Sign Up Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>