force-app/main/default/objects/COM_Release_Version__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Release_Version__c</columns>
    <columns>Instance_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>