force-app/main/default/objects/COM_Release_Version__c/listViews/Release_Number.listView-meta.xml
<ListView>
    <fullName>Release_Number</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Release_Version__c</columns>
    <columns>Instance_Name__c</columns>
    <columns>Org_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>Release Number</label>
</ListView>